add get/setProfileInformation() to modify profile information field (#7511)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
1. Add `getProfileInformation()` and `setProfileInformation(string)`
functions to Lua to read/write to the profile information displayed on
the profile connection window.
2. Changed profile connection window text from "Informational" to
"Information" to match functions and read clearer.
3. Fix bug where one could not modify default games information text.
Now load user information first if present, fallback to default.
Clearing user set information (ie. `setProfileInformation("")`) also
reverts to default game information.

#### Motivation for adding to Mudlet
Gives the ability to add profile specific information via the Lua API
which can then be seen on the profile connection window.

#### Other info (issues closed, discussion etc)
closes #5333

--- a/src/ui/connection_profiles.ui
+++ b/src/ui/connection_profiles.ui
@@ -794,7 +794,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QGroupBox" name="informationalArea">
+          <widget class="QGroupBox" name="informationArea">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -808,7 +808,7 @@
             </size>
            </property>
            <property name="title">
-            <string>Informational</string>
+            <string>Information</string>
            </property>
            <layout class="QVBoxLayout" name="vBoxLayout_4">
             <property name="leftMargin">
