Add Medievia to default games list (#7448)
#### Brief overview of PR changes/additions

This adds Medievia to the default games list.
I have included an icon, a font, and a Bootstrap script that will
automatically fetch the UI package.
The current Bootstrap script and self-updater are working without Mudlet
Package Repository integration, but if it is absolutely desired to
migrate to that then I will learn how to do that and make those changes.

#### Motivation for adding to Mudlet

#### Other info (issues closed, discussion etc)

Please advise how to add the map.. Does it need to be hosted somewhere
and a download command put into a script?

---------

Co-authored-by: Vadim Peretokin <vperetokin@hey.com>

--- a/src/mudlet.qrc
+++ b/src/mudlet.qrc
@@ -6,6 +6,7 @@
         <file>CF-loader.xml</file>
         <file>deleteOldProfiles.xml</file>
         <file>echo.xml</file>
+        <file>MedBootstrap.xml</file>
         <file>edbee_defaults/Lua.tmLanguage</file>
         <file>edbee_defaults/Mudlet.tmTheme</file>
         <file>icons/120x30RoDLogo.png</file>
@@ -132,6 +133,7 @@
         <file>icons/media-seek-backward.png</file>
         <file>icons/media-seek-forward.png</file>
         <file>icons/media-tape.png</file>
+        <file>icons/medievia.png</file>
         <file>icons/midnightsun2.png</file>
         <file>icons/module-manager.png</file>
         <file>icons/morgengrauen_480x120.png</file>
