Add regex highlighting to triggers in script editor (#7523)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Adds highlighting to triggers in script editor using the chosen edbee
theme as a guide. Fallsback to default colours otherwise.

#### Motivation for adding to Mudlet
Better user experience, helps identify possible issues with regex
patterns.

#### Other info (issues closed, discussion etc)
closes #5641


![image](https://github.com/user-attachments/assets/ce70ca35-8b25-41e5-9e85-05f6bb2497f2)

![image](https://github.com/user-attachments/assets/1067e84e-9a21-46d3-95bb-eae0ce2cc816)

--- a/src/ui/trigger_pattern_edit.ui
+++ b/src/ui/trigger_pattern_edit.ui
@@ -177,7 +177,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineEdit_pattern">
+    <widget class="SingleLineTextEdit" name="singleLineTextEdit_pattern">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -214,6 +214,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>SingleLineTextEdit</class>
+   <extends>QTextEdit</extends>
+   <header>SingleLineTextEdit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
