--- a/src/ui/dlgPackageExporter.ui
+++ b/src/ui/dlgPackageExporter.ui
@@ -59,7 +59,7 @@
       </sizepolicy>
      </property>
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <widget class="QGroupBox" name="groupBox_exportSelection">
       <property name="title">
@@ -94,16 +94,16 @@
        </sizepolicy>
       </property>
       <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
+       <enum>QFrame::Shape::StyledPanel</enum>
       </property>
       <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
+       <enum>QFrame::Shadow::Raised</enum>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QPushButton" name="pushButton_openInfos">
          <property name="focusPolicy">
-          <enum>Qt::TabFocus</enum>
+          <enum>Qt::FocusPolicy::TabFocus</enum>
          </property>
          <property name="text">
           <string>Describe your package. Add a description, icons, assets and more.</string>
@@ -128,7 +128,7 @@
           </sizepolicy>
          </property>
          <property name="orientation">
-          <enum>Qt::Vertical</enum>
+          <enum>Qt::Orientation::Vertical</enum>
          </property>
          <widget class="QWidget" name="widget_optionalsForm" native="true">
           <property name="sizePolicy">
@@ -169,10 +169,10 @@
               </sizepolicy>
              </property>
              <property name="focusPolicy">
-              <enum>Qt::StrongFocus</enum>
+              <enum>Qt::FocusPolicy::StrongFocus</enum>
              </property>
              <property name="placeholderText">
-              <string>For attribution, displayed in the Package Manager. Required.</string>
+              <string>(recommended)</string>
              </property>
             </widget>
            </item>
@@ -265,14 +265,15 @@
               <number>140</number>
              </property>
              <property name="placeholderText">
-              <string>One-line package description shown in the Package Manager. Required.</string>
+              <string>one-line description (recommended)</string>
              </property>
             </widget>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_detailedDescription">
              <property name="text">
-              <string>Description</string>
+              <string>Description
+(e.g. how to use)</string>
              </property>
              <property name="buddy">
               <cstring>textEdit_description</cstring>
@@ -285,7 +286,8 @@
               <bool>true</bool>
              </property>
              <property name="text">
-              <string>
+              <string>(recommended)
+
 This package description is shown in the package manager.  The editor supports Commonmark markdown.  Follow the description below for a thorough example of what to include in your package description.
 
 ### Description
@@ -296,7 +298,7 @@ A full description of what this package achieves. If the package is game specifi
 
 If this package uses aliases, show a few examples and expected output.
 
-`> alias_1`
+`&gt; alias_1`
 
     output of alias_1  -- indent by four spaces
     more output        -- for code blocks
@@ -324,8 +326,11 @@ Further reading material. e.g. a link to the Mudlet wiki, forums, Github package
            </item>
            <item row="4" column="1">
             <widget class="QLineEdit" name="lineEdit_version">
+             <property name="text">
+              <string>1</string>
+             </property>
              <property name="placeholderText">
-              <string>Version number. Required.</string>
+              <string>(recommended)</string>
              </property>
             </widget>
            </item>
@@ -373,7 +378,7 @@ Further reading material. e.g. a link to the Mudlet wiki, forums, Github package
                 </property>
                </widget>
               </item>
-              <item alignment="Qt::AlignHCenter">
+              <item alignment="Qt::AlignmentFlag::AlignHCenter">
                <widget class="QPushButton" name="addDependency">
                 <property name="enabled">
                  <bool>true</bool>
@@ -460,7 +465,7 @@ Further reading material. e.g. a link to the Mudlet wiki, forums, Github package
               <item>
                <spacer name="horizontalSpacer_2">
                 <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
+                 <enum>Qt::Orientation::Horizontal</enum>
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
@@ -479,7 +484,7 @@ Further reading material. e.g. a link to the Mudlet wiki, forums, Github package
                  </sizepolicy>
                 </property>
                 <property name="layoutDirection">
-                 <enum>Qt::LeftToRight</enum>
+                 <enum>Qt::LayoutDirection::LeftToRight</enum>
                 </property>
                 <property name="text">
                  <string>Select files to include in package</string>
@@ -489,7 +494,7 @@ Further reading material. e.g. a link to the Mudlet wiki, forums, Github package
               <item>
                <spacer name="horizontalSpacer">
                 <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
+                 <enum>Qt::Orientation::Horizontal</enum>
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
@@ -550,7 +555,7 @@ Further reading material. e.g. a link to the Mudlet wiki, forums, Github package
       <string/>
      </property>
      <property name="alignment">
-      <set>Qt::AlignCenter</set>
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
@@ -560,7 +565,7 @@ Further reading material. e.g. a link to the Mudlet wiki, forums, Github package
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
-      <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Close</set>
+      <set>QDialogButtonBox::StandardButton::Apply|QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Close</set>
      </property>
     </widget>
    </item>
