Add: changelog option to Mudlet menu (#7355)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions

#### Motivation for adding to Mudlet
User request
#### Other info (issues closed, discussion etc)
Close https://github.com/Mudlet/Mudlet/issues/4223

---------

Co-authored-by: Kebap <kebap_spam@gmx.net>
Co-authored-by: Stephen Lyons <slysven@virginmedia.com>
Co-authored-by: Vadim Peretokin <vadi2@users.noreply.github.com>

--- a/src/ui/main_window.ui
+++ b/src/ui/main_window.ui
@@ -143,6 +143,7 @@
     </property>
     <addaction name="dactionAbout"/>
     <addaction name="dactionUpdate"/>
+    <addaction name="dactionChangelog"/>
     <addaction name="dactionReportIssue"/>
    </widget>
    <widget class="QMenu" name="menuGames">
@@ -414,6 +415,11 @@
   <action name="dactionCloseProfile">
    <property name="text">
     <string>Close profile</string>
+   </property>
+  </action>
+  <action name="dactionChangelog">
+   <property name="text">
+    <string>Show changelog</string>
    </property>
   </action>
   <action name="dactionToggleTimeStamp">
