--- a/src/ui/map_label.ui
+++ b/src/ui/map_label.ui
@@ -163,6 +163,23 @@
        </widget>
       </item>
       <item row="7" column="0">
+       <widget class="QLabel" name="label_outline">
+        <property name="text">
+         <string>Text outline:</string>
+        </property>
+        <property name="buddy">
+         <cstring>pushButton_outlineColor</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="1" colspan="2">
+       <widget class="QPushButton" name="pushButton_outlineColor">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0">
        <widget class="QLabel" name="label_position">
         <property name="text">
          <string>Position:</string>
@@ -172,7 +189,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="1" colspan="2">
+      <item row="8" column="1" colspan="2">
        <widget class="QComboBox" name="comboBox_position">
         <item>
          <property name="text">
@@ -186,7 +203,7 @@
         </item>
        </widget>
       </item>
-      <item row="8" column="1">
+      <item row="9" column="1">
        <widget class="QCheckBox" name="checkBox_scaling">
         <property name="toolTip">
          <string>&lt;p&gt;If deselected the label will have the same size when you zoom in and out in the mapper. If it is selected the label will scale when you zoom the mapper.&lt;/p&gt;</string>
