add mpkg as a default package (#7676)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Add mpkg (the command line package manager for Mudlet) as a default
package.

#### Motivation for adding to Mudlet
Interfaces with packages.mudlet.org, allowing users and game admins to
share scripts. Creates a central repository for finding useful packages.

#### Other info (issues closed, discussion etc)
closes #3067 
closes #3069

---------

Co-authored-by: Vadim Peretokin <vperetokin@hey.com>

--- a/src/mudlet.qrc
+++ b/src/mudlet.qrc
@@ -6,6 +6,7 @@
         <file>CF-loader.xml</file>
         <file>deleteOldProfiles.mpackage</file>
         <file>echo.mpackage</file>
+        <file>mpkg.mpackage</file>
         <file>MedBootstrap.xml</file>
         <file>edbee_defaults/Lua.tmLanguage</file>
         <file>edbee_defaults/Mudlet.tmTheme</file>
